# DNA_Char_Prediction

./: .gitignore  pyproject.toml  readme.MD
app/sandbox/: eda.ipynb  model.ipynb
app/src/: constants.py  model.py  train_model.py  utils.py
