[tool.poetry]
name = "dna-char-predictioner-tt"
version = "0.1.0"
description = ""
authors = ["MRossa <maxim.rossa@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.0"
torch = "^2.3.1"
scikit-learn = "^1.5.0"
pytorch-lightning = "^2.3.1"
ipywidgets = "^8.1.3"
matplotlib = "^3.9.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
